# rtxscraper

./: .gitignore  Dockerfile  README.md  checkrtx.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
